--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
@@ -13,17 +14,20 @@
     "axios": "^0.21.1",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
+    "date-fns": "^2.23.0",
     "history": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
+    "react-chat-widget": "^3.1.0",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
