--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-chartjs-2": "^2.11.1",
-    "react-chat-widget": "^3.1.0",
+    "react-chat-window": "^1.2.1",
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
