--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-chat-window": "^1.2.1",
     "react-circular-progressbar": "^2.0.4",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-redux": "^7.2.4",
