--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,3 +36,5 @@ deploy:
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$DEV_SERVER_IP sudo docker run -p 3010:80 -d --restart unless-stopped --name cusrtomer-portal registry.gitlab.com/noble2/skrap-customer-portal:develop
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$DEV_SERVER_IP sudo docker system prune -f
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$DEV_SERVER_IP sudo docker volume prune -f
+  environment:
+    name: develop
