--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-chartjs-2": "^2.11.1",
     "react-chat-window": "^1.2.1",
     "react-circular-progressbar": "^2.0.4",
-    "react-csv": "^2.0.3",
+    "react-data-export": "^0.6.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
@@ -36,7 +36,8 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.8",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
