--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "bootstrap-daterangepicker": "^3.1.0",
     "chart.js": "^2.9.4",
     "clsx": "^1.1.1",
     "date-fns": "^2.23.0",
@@ -20,6 +21,7 @@
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-bootstrap-daterangepicker": "^7.0.0",
     "react-chartjs-2": "^2.11.1",
     "react-chat-window": "^1.2.1",
     "react-circular-progressbar": "^2.0.4",
