--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
+    "react-tooltip": "^4.2.21",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.1",
