--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "private": true,
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
+    "@emotion/styled": "^11.8.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
     "@mui/icons-material": "^5.0.0",
+    "@mui/lab": "^5.0.0-alpha.82",
+    "@mui/material": "^5.8.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "apexcharts": "^3.35.2",
     "axios": "^0.21.1",
     "bootstrap-daterangepicker": "^3.1.0",
     "chart.js": "^2.9.4",
@@ -21,6 +25,7 @@
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap-daterangepicker": "^7.0.0",
     "react-chartjs-2": "^2.11.1",
     "react-chat-window": "^1.2.1",
