--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 docker-build:
   stage: docker-build
   image: docker:latest
-  tags: [develop]
+  tags: [staging]
   only:
     - release/develop
     - za-develop
@@ -22,7 +22,7 @@ docker-build:
 deploy:
   stage: deploy
   image: kroniak/ssh-client
-  tags: [develop]
+  tags: [staging]
   only:
     - release/develop
     - za-develop
