--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
     "@emotion/styled": "^11.8.1",
+    "@frogress/line": "^1.1.0",
     "@mui/icons-material": "^5.0.0",
     "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.8.0",
@@ -17,6 +18,7 @@
     "chart.js": "^3.7.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.23.0",
+    "framer-motion": "^6.3.6",
     "history": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
