--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-circular-progressbar": "^2.0.4",
     "react-data-export": "^0.6.0",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-gradient-progress": "^1.0.3",
