--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "react-dom": "^17.0.2",
     "react-google-maps": "^9.4.5",
     "react-gradient-progress": "^1.0.3",
+    "react-multi-carousel": "^2.8.0",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
