--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "clsx": "^1.1.1",
     "date-fns": "^2.23.0",
     "framer-motion": "^6.3.6",
+    "highcharts": "^10.1.0",
+    "highcharts-react-official": "^3.1.0",
     "history": "^5.0.1",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
