--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^17.0.2",
+    "react-elastic-carousel": "^0.11.5",
     "react-google-maps": "^9.4.5",
     "react-gradient-progress": "^1.0.3",
-    "react-multi-carousel": "^2.8.0",
+    "react-grid-carousel": "^1.0.1",
     "react-redux": "^7.2.4",
-    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
