--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-chartjs-2": "^4.1.0",
     "react-chat-window": "^1.2.1",
     "react-circular-progressbar": "^2.0.4",
+    "react-csv": "^2.2.2",
     "react-data-export": "^0.6.0",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.8.0",
