--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "chart.js": "^3.7.1",
     "clsx": "^1.1.1",
     "date-fns": "^2.23.0",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^6.3.6",
     "highcharts": "^10.1.0",
     "highcharts-react-official": "^3.1.0",
     "history": "^5.0.1",
+    "html-to-image": "^1.9.0",
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
