modal and listing

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/lab": "^5.0.0-alpha.82",
     "@mui/material": "^5.8.0",
     "@mui/styles": "^5.8.0",
+    "@mui/x-date-pickers": "^5.0.7",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -28,6 +29,7 @@
     "moment": "^2.29.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.2.1",
     "react-bootstrap-daterangepicker": "^7.0.0",
     "react-chartjs-2": "^4.1.0",
     "react-chat-window": "^1.2.1",
@@ -41,9 +43,10 @@
     "react-google-maps": "^9.4.5",
     "react-gradient-progress": "^1.0.3",
     "react-grid-carousel": "^1.0.1",
+    "react-multi-carousel": "^2.8.2",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-spinners": "^0.11.0",
     "react-table": "^7.7.0",
     "react-tooltip": "^4.2.21",
@@ -55,10 +58,10 @@
     "xlsx": "^0.17.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": [
@@ -77,5 +80,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-error-overlay": "6.0.9"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
