--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-elastic-carousel": "^0.11.5",
     "react-google-maps": "^9.4.5",
+    "react-google-recaptcha": "^2.1.0",
     "react-gradient-progress": "^1.0.3",
     "react-grid-carousel": "^1.0.1",
     "react-redux": "^7.2.4",
