--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,9 +5,10 @@ stages:
 docker-build:
   stage: docker-build
   image: docker:latest
-  tags: [production]
+  tags: [staging]
   only:
     - release/develop
+    - currency-updates
     - release/staging
     - release/production
   services:
@@ -15,27 +16,29 @@ docker-build:
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
   script:
-    - docker build --pull -t registry.gitlab.com/noble2/skrap-customer-portal:production .
-    - docker push registry.gitlab.com/noble2/skrap-customer-portal:production
+    - docker build --pull -t registry.gitlab.com/noble2/skrap-customer-portal:develop .
+    - docker push registry.gitlab.com/noble2/skrap-customer-portal:develop
 
 deploy:
   stage: deploy
   image: kroniak/ssh-client
-  tags: [production]
+  tags: [staging]
   only:
     - release/develop
+    - currency-updates
     - release/staging
     - release/production
   before_script:
     - echo "deploying app on server"
   script:
     - chmod 400 $SSH_PRIVATE_KEY
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker pull registry.gitlab.com/noble2/skrap-customer-portal:production
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker stop customer-portal || true
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker rm customer-portal || true
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker run -p 3002:80 -d --restart unless-stopped --name customer-portal registry.gitlab.com/noble2/skrap-customer-portal:production
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker system prune -f
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker pull registry.gitlab.com/noble2/skrap-customer-portal:develop
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker stop cusrtomer-dev || true
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker rm cusrtomer-dev || true
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker run -p 3010:80 -d --restart unless-stopped --name cusrtomer-dev registry.gitlab.com/noble2/skrap-customer-portal:develop
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker system prune -a -f
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker image prune -a -f
     - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP sudo docker volume prune -f
   environment:
-    name: production
+    name: develop
 
