--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,10 +5,9 @@ stages:
 docker-build:
   stage: docker-build
   image: docker:latest
-  tags: [production]
+  tags: [prod]
   only:
     - release/develop
-    - release/staging
     - release/production
   services:
     - name: docker:dind
@@ -21,20 +20,19 @@ docker-build:
 deploy:
   stage: deploy
   image: kroniak/ssh-client
-  tags: [production]
+  tags: [prod]
   only:
     - release/develop
-    - release/staging
     - release/production
   before_script:
     - echo "deploying app on server"
   script:
     - chmod 400 $SSH_PRIVATE_KEY
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP docker pull registry.gitlab.com/noble2/skrap-customer-portal:production
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP docker stop customer-portal || true
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP docker rm customer-portal || true
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP docker run -p 3002:80 -d --restart unless-stopped --name customer-portal registry.gitlab.com/noble2/skrap-customer-portal:production
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP docker system prune -f
-    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$SERVER_2_IP docker volume prune -f
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$PROD_SERVER_IP docker pull registry.gitlab.com/noble2/skrap-customer-portal:production
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$PROD_SERVER_IP docker stop customer-portal || true
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$PROD_SERVER_IP docker rm customer-portal || true
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$PROD_SERVER_IP docker run -p 3004:80 -d --restart unless-stopped --name customer-portal registry.gitlab.com/noble2/skrap-customer-portal:production
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$PROD_SERVER_IP docker system prune -f
+    - ssh -o StrictHostKeyChecking=no -i $SSH_PRIVATE_KEY ubuntu@$PROD_SERVER_IP docker volume prune -f
   environment:
     name: production
