--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "react-tooltip": "^4.2.21",
     "redux": "^4.1.1",
     "redux-thunk": "^2.3.0",
-    "sass": "^1.89.2",
+    "node-sass": "^6.0.1",
     "styled-components": "^5.3.1",
     "sweetalert2": "^11.1.8",
     "web-vitals": "^1.0.1",
